<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.khang.photogalleryapp.AdvancedSearch"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txtStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="StartDate:"
        app:layout_constraintRight_toLeftOf="@+id/txtStartDate"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="9dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/txtStartDate"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="36dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Advanced Search"
        android:textSize="24sp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="35dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/txtEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EndDate:"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/txtEndDate"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/txtKeyLabel"
        android:layout_marginRight="1dp" />

    <TextView
        android:id="@+id/txtLongLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="Latitude:"
        app:layout_constraintBottom_toBottomOf="@+id/txtLat"
        app:layout_constraintLeft_toLeftOf="@+id/txtStart"
        app:layout_constraintRight_toRightOf="@+id/txtKeyLabel"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/txtLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter Longitude Coordinates"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="101dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/txtKeyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Keyword (s)"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="43dp"
        android:layout_marginTop="9dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtKeyword"
        android:layout_marginLeft="43dp" />

    <EditText
        android:id="@+id/txtKeyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter a Keyword"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtEndDate"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/txtEndDate"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtEndDate" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:text="Search"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="3dp"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="181dp"
        android:layout_height="48dp"
        android:text="Back to Main Menu"
        android:layout_marginStart="16dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/txtStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Select Date..."
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtLat"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLat"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtLat" />

    <EditText
        android:id="@+id/txtEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Select Date..."
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtStartDate"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/txtStartDate"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtStartDate" />

    <EditText
        android:id="@+id/txtLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Enter Latitude Coordinates"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="@+id/txtLong"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLong"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txtLong" />

    <TextView
        android:id="@+id/txtLatLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Longitude:"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtLong"
        app:layout_constraintRight_toRightOf="@+id/txtLongLabel"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
